--- a/index.html
+++ b/index.html
@@ -31,19 +31,26 @@
   <main>
     <section class="top">
       <nav>
-        <img src="./images/logo.svg" alt="" srcset="">
+        <img src="./images/logo.svg" alt="logo" >
         <menu type="site">
           <li>
-            About
+            <a href="#about">
+              About
+            </a>
           </li>
           <li>
-            Discover
+            <a href="#discover">
+              Discover
+            </a>
           </li>
-          <li> Get Started
+          <li>
+            <a href="#getstarted">
+              Get Started
+            </a>
           </li>
         </menu>
         <label for="hamburger">
-          <img src="./images/icon-hamburger.svg" alt="" srcset="">
+          <img src="./images/icon-hamburger.svg" alt="open mobile menu">
         </label>
         <input type="checkbox" id="hamburger">
 
@@ -73,7 +80,7 @@
               </button>
             </span>
             <span class="btn mobile">
-              <input type="image" src="./images/icon-bookmark.svg" alt="">
+              <input type="image" src="./images/icon-bookmark.svg" alt="logo">
             </span>
 
           </section>
@@ -217,11 +224,6 @@
     
     </section>
   </main>
-
-
-
-
-
 
 
   <!-- Selection modal start -->
